// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative authsrv.proto
  
syntax = "proto3";

package authsrv;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ardanlabs/service/app/api/authsrv/gprc";

service Auth {
    rpc Token(Kid) returns (TokenString) {}
    rpc Authenticate(AuthParams) returns (AuthResp) {}
    rpc Authorize(AuthInfo) returns (google.protobuf.Empty) {}
}

message Kid {
    string Kid = 1;
}

message TokenString {
    string token = 1;
}

message AuthParams {
    string authorization = 1;
}

message AuthResp {
    string user_id = 1;
    Claims claims  = 2;
}

message Claims {
             string                    issuer     = 1;
             string                    subject    = 2;
    repeated string                    audience   = 3;
             google.protobuf.Timestamp expires_at = 4;
             google.protobuf.Timestamp not_before = 5;
             google.protobuf.Timestamp issued_at  = 6;
             string                    id         = 7;
    repeated string                    roles      = 8;
}

message AuthInfo {
    Claims claims  = 1;
    string user_id = 2;
    string rule    = 3;
}
